--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,6 +9,8 @@ $header-bg: linear-gradient(
 );
 $nav-bg: linear-gradient(120deg, #6e0257, rgb(146, 10, 0));
 $red: #ea1212;
+$gray: #c4c4c4ba;
+
 $blue: #3a0cef;
 $team-bg: linear-gradient(
   180deg,
