--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@ a {
 }
 
 nav {
+  z-index: 10;
   display: flex;
   align-items: center;
   position: fixed;
@@ -116,5 +117,129 @@ h1 {
   margin-top: 40px;
   margin-bottom: 30px;
 }
+.mission__container {
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "";
+    background: url(../img/line-top.svg) no-repeat;
+    top: 0;
+    left: 0;
+    width: 150px;
+    height: 150px;
+  }
+  &::after {
+    position: absolute;
+    content: "";
+    background: url(../img/line-bottom.svg) no-repeat;
+    bottom: 0;
+    right: 0;
+    width: 150px;
+    height: 150px;
+  }
+  * {
+    text-transform: capitalize;
+    a {
+      color: $red;
+    }
+  }
+}
+.mission__title {
+  padding: 25px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  p {
+    font-size: 2rem;
+    opacity: 0.9;
+    margin-bottom: 15px;
+    &:last-child {
+      margin-top: 10px;
+      text-transform: none;
+      font-size: 3rem;
+      font-weight: 600;
+    }
+  }
+}
 
+p.title {
+  font-weight: 500;
+}
+
+.mission__items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 30px 200px;
+  p.title {
+    margin: 25px 0 10px;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 500;
+  }
+  p {
+    max-width: 260px;
+    font-weight: 300;
+  }
+  a {
+    font-weight: 300;
+    font-size: 1.2rem;
+  }
+}
+
+.mission__item {
+  display: grid;
+  margin-bottom: 30px;
+  img {
+    width: 110px;
+    height: 110px;
+  }
+  :first-child {
+    justify-self: center;
+  }
+}
+
+.mission__content {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 200px 60px;
+  .mission__img {
+    margin-right: 15px;
+    max-width: 700px;
+    width: 100%;
+    height: 100%;
+  }
+}
+.mission__article {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: end;
+  justify-content: center;
+
+  p {
+    max-width: 430px;
+    margin-bottom: 30px;
+    &.title {
+      margin: 40px 0 10px;
+      font-size: 1.6rem;
+    }
+  }
+  .article__img {
+    max-width: 240px;
+    max-height: 150px;
+    height: 100%;
+    width: 100%;
+    background-color: $gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
 @import "_adaptive";
