--- a/scss/style.scss
+++ b/scss/style.scss
@@ -208,7 +208,7 @@ p.title {
     margin-right: 15px;
     max-width: 700px;
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 }
 .mission__article {
