--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,6 +10,8 @@ $header-bg: linear-gradient(
 $nav-bg: linear-gradient(120deg, #6e0257, rgb(146, 10, 0));
 $red: #ea1212;
 $gray: #c4c4c4ba;
+$features-line: linear-gradient(105.42deg, #49a3f7 32.05%, #d702a8 72.75%);
+$features-bg: #e3dcdc1c;
 
 $blue: #3a0cef;
 $team-bg: linear-gradient(
