--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,4 +242,148 @@ p.title {
     }
   }
 }
+
+.features {
+  background-color: $features-bg;
+  background-image: url(../img/features-bg.svg);
+  background-position: 0px 0px;
+  transition: background-position 0.5s ease-out;
+}
+.features__container {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.features__title {
+  p {
+    font-size: 1.3rem;
+    &.title {
+      font-size: 2rem;
+    }
+  }
+}
+
+.features__items {
+  padding: 20px 200px 40px;
+  display: grid;
+  grid-template: 1fr 1fr / repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
+  row-gap: 30px;
+}
+
+.features__item {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "";
+    top: -20px;
+    right: 0;
+    width: 2px;
+    height: 120%;
+    background-color: #37bb5c;
+  }
+  display: flex;
+  justify-content: center;
+  &:nth-child(3n + 3) {
+    &::before {
+      content: none;
+    }
+  }
+  p {
+    &.title {
+      color: $red;
+      font-size: 1.3rem;
+      text-transform: uppercase;
+    }
+  }
+  &:nth-child(2n) {
+    p.title {
+      color: $blue;
+    }
+  }
+}
+
+.item__content {
+  margin: 0 20px;
+  width: 250px;
+  height: 200px;
+  border: 4px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(
+    105.42deg,
+    #49a3f7 32.05%,
+    #d702a8 72.75%
+  );
+
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  :last-child {
+    align-self: flex-start;
+    margin-top: 0;
+    opacity: 0.7;
+    font-size: 1.1rem;
+    max-width: 200px;
+  }
+  position: relative;
+}
+.team {
+  background: $team-bg;
+}
+.team__container {
+  padding: 60px 200px;
+  color: white;
+}
+.team__people {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+}
+.team__person {
+  max-width: 300px;
+  justify-self: center;
+  margin-right: 30px;
+  p {
+    margin: 0 20px 0 0;
+    font-size: 1.5rem;
+    text-align: end;
+  }
+  img {
+    max-width: 300px;
+    width: 100%;
+    height: auto;
+    z-index: 1;
+    position: relative;
+  }
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    height: 100%;
+    right: -30px;
+    width: 70%;
+    background: #c4c4c488;
+    z-index: 0;
+  }
+}
+.team__desc {
+  margin-top: 30px;
+  display: grid;
+  text-transform: capitalize;
+  font-size: 1.3rem;
+  a.btn {
+    margin-top: 40px;
+    padding: 10px 50px;
+    font-size: 1.3rem;
+    display: block;
+    width: fit-content;
+    justify-self: center;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    font-weight: 500;
+  }
+}
 @import "_adaptive";
