--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,7 @@ a {
     font-size: 1.5rem;
     margin-top: 25px;
     transition: all 0.4s ease;
+    width: fit-content;
     &:hover {
       background-color: white;
       color: black;
@@ -57,6 +58,15 @@ nav {
   color: $red;
   font-size: 25px;
   font-weight: 500;
+  a {
+    background: linear-gradient(90deg, transparent, $red, transparent) bottom /
+      var(--d, 0) 3px no-repeat;
+    transition: all 0.4s;
+    &:hover {
+      color: $red;
+      --d: 100%;
+    }
+  }
 }
 
 .nav__logo {
@@ -141,6 +151,10 @@ h1 {
     text-transform: capitalize;
     a {
       color: $red;
+      transition: all 0.3s ease;
+      &:hover {
+        color: $blue;
+      }
     }
   }
 }
@@ -384,6 +398,147 @@ p.title {
     justify-self: center;
     box-shadow: 0px 4px 4px 0px #00000040;
     font-weight: 500;
+  }
+}
+.service__container {
+  padding: 0 100px;
+}
+.service__content {
+  padding: 0 100px;
+  p.title {
+    margin-top: 0;
+  }
+  border-left: 10px solid;
+  border-right: 10px solid;
+  border-image-slice: 1;
+  border-image-source: $service-border;
+}
+.service__title {
+  text-transform: capitalize;
+  font-size: 1.3rem;
+  text-align: center;
+  padding: 50px 0 30px;
+  p.title {
+    font-size: 1.6rem;
+  }
+}
+.service__gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 35px;
+  padding: 0 0 30px;
+  img {
+    width: 100%;
+    height: auto;
+  }
+  :last-child {
+    grid-column: 2 / span 2;
+  }
+}
+
+.creative {
+  background: $creative-bg;
+}
+.creative__container {
+  padding: 50px 80px;
+}
+.creative__content {
+  background: $red-bg;
+  display: flex;
+}
+.creative__desc {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 30px;
+  color: white;
+  a {
+    font-size: 1rem;
+    font-weight: 400;
+    text-transform: capitalize;
+  }
+  p {
+    font-size: 1.3rem;
+    &.title {
+      text-transform: capitalize;
+      font-size: 3.5rem;
+      margin: 10px 0;
+      span {
+        font-size: 2.5rem;
+      }
+    }
+  }
+}
+.creative__gallery {
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  :first-child {
+    grid-column: 1 / span 2;
+  }
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+footer {
+  background: $footer;
+}
+.footer__container {
+  padding: 30px 70px 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-content: center;
+  a {
+    text-align: center;
+    transition: all 0.3s ease;
+    &:hover {
+      color: #ff256e;
+    }
+    &.link {
+      font-weight: 700;
+      font-size: 1.5rem;
+    }
+    &.btn {
+      justify-self: end;
+      margin: 0;
+      border-color: $red;
+      &:hover {
+        background-color: $red;
+        color: white;
+      }
+    }
+  }
+  .sign {
+    margin-top: 40px;
+    font-weight: 500;
+    font-size: 1rem;
+    color: #ffffff;
+    grid-column: 1 / 4;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    a {
+      font-size: 1.3rem;
+    }
+    p:last-child {
+      justify-self: end;
+      align-self: flex-end;
+      font-size: 1rem;
+    }
+  }
+}
+.socials {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-self: start;
+  width: 70%;
+  justify-content: space-between;
+  li {
+    font-size: 1.6rem;
+    margin-right: 10px;
   }
 }
 @import "_adaptive";
