--- a/scss/style.scss
+++ b/scss/style.scss
@@ -542,14 +542,10 @@ footer {
   }
 }
 
-.header__desc h1,
-.header__desc p,
-.header__desc a,
-nav,
-.header__container img,
 .creative__desc p.title,
 .creative__desc p.text,
 .creative__desc a {
   opacity: 0;
 }
 @import "_adaptive";
+@import "_portfolio";
