--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "_variables";
+@import "_barba";
 @import url("../css/normalize.css");
 
 html {
@@ -542,10 +543,11 @@ footer {
   }
 }
 
-.creative__desc p.title,
-.creative__desc p.text,
-.creative__desc a {
+.hidden {
   opacity: 0;
+  * {
+    opacity: 0;
+  }
 }
 @import "_adaptive";
 @import "_portfolio";
